2009-11-10  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=31047
        [GTK] Failing test media/video-played-ranges-1.html

        Fix playback rate setter by remembering the rate was changed. Also
        correctly handle reverse playback by doing a seek from end to
        beginning of the media.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::MediaPlayerPrivate):
        (WebCore::MediaPlayerPrivate::currentTime):
        (WebCore::MediaPlayerPrivate::seek):
        (WebCore::MediaPlayerPrivate::hasAudio):
        (WebCore::MediaPlayerPrivate::setVolume):
        (WebCore::MediaPlayerPrivate::setRate):
        (WebCore::MediaPlayerPrivate::updateStates):
        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.h:

2009-11-10  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Rename 3D Canvas related classes to use WebGL prefix
        https://bugs.webkit.org/show_bug.cgi?id=29095

        Automatic rename of all WebGL related types from Canvas* to
        WebGL* per more recent version of the WebGL spec.

        Due to the automatic rename I've removed the 600+ line change list.

2009-11-09  Dirk Schulze  <krit@webkit.org>

        Reviewed by Oliver Hunt.

        SVG feDisplacementMap is not implemented
        [https://bugs.webkit.org/show_bug.cgi?id=31255]

        This is the implementation of the SVG filter effect
        feDisplacementMap. 

        Test: svg/filters/feDisplacementMap.svg

        * svg/graphics/filters/SVGFEDisplacementMap.cpp:
        (WebCore::FEDisplacementMap::apply):

2009-11-09  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Add a comment about null strings and hash functions.
        https://bugs.webkit.org/show_bug.cgi?id=29118

        * platform/text/StringHash.h:

2009-11-09  Martin Robinson  <martin.james.robinson@gmail.com>
